--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 animation.json filter=lfs diff=lfs merge=lfs -text
+Frontend/src/assets/animation.json filter=lfs diff=lfs merge=lfs -text
